# adventOfCode2024

./: .gitignore
day_1/: CMakeLists.txt
day_1/src/: main.cpp
day_2/src/: main.cpp
day_3/src/: input_test.txt  main.cpp
day_4/src/: main.cpp
day_5/src/: input_test.txt  main.cpp
utils/include/: utils.h
utils/src/: utils.cpp
